Web UI: Fixed so that footer is always visible for all pages

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -514,7 +514,7 @@ html, body {
 
 .sub-content {
   flex: 1;
-  padding: 0.75rem 1rem 5rem;
+  padding: 0.75rem 1rem 1rem;
   overflow-y: auto;
 }
 
